# ledplayr

./: .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  build.rs  default.nix  devenv.nix  devenv.yaml  flake.nix  openapi.json
.github/workflows/: release.yml
migrations/2024-09-19-191857_initial/: down.sql  up.sql
migrations/2024-11-07-161931_more-virtual-display/: down.sql  up.sql
migrations/2024-12-06-094128_add-virtual-buttons/: down.sql  up.sql
src/: button.rs  config.rs  error.rs  fpp.rs  lib.rs  models.rs  patterns.rs  player.rs  state.rs  storage.rs  web.rs
src/db/: mod.rs  models.rs  schema.rs
src/fseq/: error.rs  parser.rs
src/web/: buttons.rs  config.rs  error.rs  files.rs  fpp.rs  logs.rs  meshes.rs  mod.rs  player.rs  playlists.rs  router.rs  scenes.rs  scheduler.rs  schedules.rs  sequences.rs  testing.rs  upload.rs  utils.rs
web/: .prettierrc  eslint.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css  app.d.ts
web/src/lib/: ROUTES.ts  stores.ts  types.ts  utils.ts
web/src/lib/client/: client.gen.ts  index.ts  schemas.gen.ts  sdk.gen.ts  services.gen.ts  types.gen.ts
web/src/lib/client/client/: client.gen.ts  types.gen.ts  utils.gen.ts
web/src/lib/client/core/: bodySerializer.gen.ts  pathSerializer.gen.ts  serverSentEvents.gen.ts  utils.gen.ts
web/src/lib/components/: Delete.svelte  Navbar.svelte  Notifications.svelte  Sidebar.svelte  Stats.svelte  Theme.svelte  VirtualDisplay.svelte
web/src/lib/components/test/: PatternPicker.svelte  TestModel.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/about/: +page.svelte
web/src/routes/buttons/: +page.svelte
web/src/routes/config/: +page.svelte
web/src/routes/display/: +page.svelte
web/src/routes/logs/: +page.svelte
web/src/routes/models/: +page.svelte
web/src/routes/outputs/: +page.svelte
web/src/routes/playlists/: +page.svelte
web/src/routes/schedules/: +page.svelte
web/src/routes/sequences/: +page.svelte
